# jaxrenderer

./: .git-blame-ignore-revs  .pre-commit-config.yaml  LICENSE  README.md  changelog.md  changlog.md  cspell.config.yaml  example.py  example2.py  example3.py  example4.py  profile_implementation.py  pyproject.toml  smoke_test.py  test_camera.py  tests.py  tox.ini
.github/workflows/: checks.yml  pypi.yml
assets/: process_vertices.py  sphere_processed.txt  sphere_vertices.txt
examples/: axises_and_plane.py  batch_rendering.py  behind_camera.py  plane_as_mesh.py  simple_cube.py  simple_triangles.py  sphere.py
notebooks/: 32x32 A100 Various Envs.ipynb  Batch Rendering Brax Envs using JaxRenderer.ipynb  Generate Data.ipynb  Plot Benchmark Results.ipynb
notebooks/32x32/: A100.ipynb  T4.ipynb  TPU v2-8.ipynb  TPU v3-8.ipynb
notebooks/480x270/: A100.ipynb  T4.ipynb
notebooks/84x84/: A100.ipynb  T4.ipynb  TPU v2-8.ipynb  TPU v3-8.ipynb
notebooks/960x540/: A100.ipynb  T4.ipynb
renderer/: README.md  __init__.py  _backport.py  _meta_utils.py  geometry.py  model.py  original_implementation.py  pipeline.py  renderer.py  scene.py  shader.py  shadow.py  types.py  utils.py  value_checker.py
renderer/shaders/: README.md  depth.py  gouraud.py  gouraud_texture.py  phong.py  phong_darboux.py  phong_reflection.py  phong_reflection_shadow.py
renderer/shapes/: capsule.py  cube.py
test_resources/: utils.py
test_resources/pre-gen-brax/: README.md
tests/: smoke_test.py  smoke_test_grad.py  test_utils.py
typings/matplotlib/: __init__.pyi  _afm.pyi  _animation_data.pyi  _blocking_input.pyi  _cm.pyi  _cm_listed.pyi  _color_data.pyi  _constrained_layout.pyi  _docstring.pyi  _enums.pyi  _fontconfig_pattern.pyi  _internal_utils.pyi  _layoutgrid.pyi  _mathtext.pyi  _mathtext_data.pyi  _pylab_helpers.pyi  _text_helpers.pyi  _tight_bbox.pyi  _tight_layout.pyi  _type1font.pyi  _version.pyi  afm.pyi  animation.pyi  artist.pyi  axis.pyi  backend_bases.pyi  backend_managers.pyi  backend_tools.pyi  bezier.pyi  category.pyi  cm.pyi  collections.pyi  colorbar.pyi  colors.pyi  container.pyi  contour.pyi  dates.pyi  docstring.pyi  dviread.pyi  figure.pyi  (+36 more)
typings/matplotlib/_api/: __init__.pyi  deprecation.pyi
typings/matplotlib/axes/: __init__.pyi  _axes.pyi  _base.pyi  _secondary_axes.pyi
typings/matplotlib/backends/: __init__.pyi  backend_agg.pyi  backend_webagg.pyi  backend_webagg_core.pyi
typings/matplotlib/cbook/: __init__.pyi
typings/matplotlib/projections/: __init__.pyi  geo.pyi  polar.pyi
typings/matplotlib/style/: __init__.pyi  core.pyi
typings/matplotlib/testing/: __init__.pyi
typings/matplotlib/tests/: __init__.pyi
typings/matplotlib/tri/: __init__.pyi  _triangulation.pyi  _tricontour.pyi  _trifinder.pyi  _triinterpolate.pyi  _tripcolor.pyi  _triplot.pyi  _trirefine.pyi  _tritools.pyi
