[tool.poetry]
name = "jaxtinyrenderer"
version = "0.1.0"
description = "Jax implementation of ssloy/tinyrenderer for brax"
authors = ["Joey Teng <joey.teng.dev@gmail.com>"]
license = "MIT License"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
jax = "^0.4.8"
numpy = "^1.24.1"
jaxlib = {version = "^0.4.7", source = "jax"}


[tool.poetry.group.dev.dependencies]
matplotlib = "^3.6.2"
pillow = "^9.4.0"


[[tool.poetry.source]]
name = "jax"
url = "https://storage.googleapis.com/jax-releases/jax_releases.html"
default = false
secondary = false

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
